Tighten up Stereotomy API